--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,9 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "dist/**", "!.next/cache/**"]
+      "outputs": [".next/**",
+      "dist/**",
+      "!.next/cache/**"]
     },
     "lint": {
       "dependsOn": ["^lint"]
